--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,5 +1,9 @@
-<!DOCTYPE html>
+<html>
     <head>
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+        />
         <link rel="stylesheet" type="text/css" href="../style.css">
         <link href="/fontawesome/css/all.css" rel="stylesheet">
         
